# churn_ml_deployment

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
notebooks/: eda.ipynb
src/app/: app.py  main.py
src/data/: preprocess.py  validate_data.py
src/features/: build_features.py
src/model/: train_evaluate.py  tune.py
src/pipeline/: run_pipeline.py
src/service/: inference.py
tests/: test_fastapi.py  test_pipeline_data_features.py  test_pipeline_modeling.py
