[project]
name = "churn-ml-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "great-expectations>=1.17.2",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=2.22.0",
    "optuna>=4.8.0",
    "pandas>=2.0.0,<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
